--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/shared/selinux.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/shared/selinux.yml
@@ -2,12 +2,12 @@
 - name: Configure SELinux context
   become: true
   community.general.sefcontext:
-    target: "{{ jfrog_home_directory }}/artifactory/app/bin(/.*)?"
+    target: "{{ artifactory_jfrog_dir }}/artifactory/app/bin(/.*)?"
     setype: bin_t
     reload: true
     state: present
 
 - name: Restore SELinux content
   become: true
-  ansible.builtin.command: restorecon -Rv "{{ jfrog_home_directory }}/artifactory/app/bin"
+  ansible.builtin.command: restorecon -Rv "{{ artifactory_jfrog_dir }}/artifactory/app/bin"
   changed_when: false
