--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/vars/all.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/vars/all.yml
@@ -1,6 +1,6 @@
 ---
 ## [Repository] OS mapping variable for NGINX official repository
-nginx_official_repo_mapping:
+artifactory_nginx_official_repo_mapping:
   amazon: amzn
   redhat: rhel
   centos: centos
@@ -11,7 +11,7 @@ nginx_official_repo_mapping:
   aix: aix
 
 ## [Repository] variables for NGINX official repository
-nginx_official_repo_filename: 'nginx-stable'
-nginx_official_repo_description: 'nginx stable repo'
-nginx_official_repo_signing_key: 'https://nginx.org/keys/nginx_signing.key'
-nginx_official_repo_url: "https://nginx.org/packages/{{ nginx_official_repo_mapping[ansible_facts['distribution'] | lower] }}"
+artifactory_nginx_official_repo_filename: 'nginx-stable'
+artifactory_nginx_official_repo_description: 'nginx stable repo'
+artifactory_nginx_official_repo_signing_key: 'https://nginx.org/keys/nginx_signing.key'
+artifactory_nginx_official_repo_url: "https://nginx.org/packages/{{ artifactory_nginx_official_repo_mapping[ansible_facts['distribution'] | lower] }}"
