--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/handlers/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/handlers/main.yml
@@ -4,12 +4,12 @@
 - name: Restart artifactory
   become: true
   ansible.builtin.systemd_service:
-    name: "{{ artifactory_daemon }}"
+    name: "{{ artifactory_os_daemon }}"
     state: restarted
     daemon_reload: true
 
 - name: Stop artifactory
   become: true
   ansible.builtin.systemd_service:
-    name: "{{ artifactory_daemon }}"
+    name: "{{ artifactory_os_daemon }}"
     state: stopped
