--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/shared/get_archive.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/shared/get_archive.yml
@@ -2,33 +2,33 @@
 - name: Check if artifactory archive already exists
   become: true
   ansible.builtin.stat:
-    path: "{{ jfrog_home_directory }}/{{ artifactory_tar_file_name }}"
-  register: artifactory_tar_check
+    path: "{{ artifactory_jfrog_dir }}/{{ artifactory_tar_name }}"
+  register: __stat_artifactory_tar
 
 - name: Download artifactory archive
   become: true
   ansible.builtin.get_url:
-    url: "{{ artifactory_tar }}"
+    url: "{{ artifactory_tar_url }}"
     timeout: "{{ artifactory_download_timeout }}"
-    dest: "{{ jfrog_home_directory }}"
+    dest: "{{ artifactory_jfrog_dir }}"
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
     mode: '0644'
-  register: download_artifactory
-  until: download_artifactory is succeeded
+  register: __download_artifactory_tar
+  until: __download_artifactory_tar is succeeded
   retries: 3
-  when: not artifactory_tar_check.stat.exists
+  when: not __stat_artifactory_tar.stat.exists
 
 - name: Extract artifactory archive
   become: true
   ansible.builtin.unarchive:
-    src: "{{ jfrog_home_directory }}/{{ artifactory_tar_file_name }}"
-    dest: "{{ jfrog_home_directory }}"
+    src: "{{ artifactory_jfrog_dir }}/{{ artifactory_tar_name }}"
+    dest: "{{ artifactory_jfrog_dir }}"
     remote_src: true
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
-    creates: "{{ artifactory_untar_home }}"
+    creates: "{{ artifactory_untar_dir }}"
   register: unarchived_artifactory
   when:
     - not ansible_check_mode
-    - download_artifactory is succeeded
+    - __download_artifactory_tar is succeeded
