--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/shared/jdbc_driver.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/shared/jdbc_driver.yml
@@ -2,27 +2,27 @@
 - name: Check if included database driver is the correct version
   become: true
   ansible.builtin.stat:
-    path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/postgresql-{{ postgres_driver_version }}.jar"
-  register: included_database_driver
+    path: "{{ artifactory_application_dir }}/app/artifactory/tomcat/lib/postgresql-{{ artifactory_postgresql_driver_version }}.jar"
+  register: __stat_postgresql_driver
 
 - name: Check if jdbc driver exists
   become: true
   ansible.builtin.stat:
-    path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/jf_postgresql-{{ postgres_driver_version }}.jar"
-  when: not included_database_driver.stat.exists
-  register: database_driver
+    path: "{{ artifactory_application_dir }}/app/artifactory/tomcat/lib/jf_postgresql-{{ artifactory_postgresql_driver_version }}.jar"
+  register: __stat_jf_postgresql_driver
+  when: not __stat_postgresql_driver.stat.exists
 
 - name: Download jdbc driver
   become: true
   ansible.builtin.get_url:
-    url: "{{ postgres_driver_download_url }}"
-    dest: "{{ artifactory_home }}/var/bootstrap/artifactory/tomcat/lib"
+    url: "{{ artifactory_postgresql_driver_download_url }}"
+    dest: "{{ artifactory_application_dir }}/var/bootstrap/artifactory/tomcat/lib"
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
     mode: '0644'
   when:
-    - postgres_driver_download | bool
-    - postgres_driver_download_url | d('') | length > 0
-    - not database_driver.stat.exists
-    - not included_database_driver.stat.exists
+    - artifactory_postgresql_driver_download | bool
+    - artifactory_postgresql_driver_download_url | d('') | length > 0
+    - not __stat_postgresql_driver.stat.exists
+    - not __stat_jf_postgresql_driver.stat.exists
   notify: Restart artifactory
