--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
@@ -15,13 +15,13 @@
 
     - name: Ensure artifactory is stopped
       ansible.builtin.systemd_service:
-        name: "{{ artifactory_daemon }}"
+        name: "{{ artifactory_os_daemon }}"
         state: stopped
       when: unarchived_artifactory is changed
 
     - name: Check artifactory version
       ansible.builtin.fetch:
-        src: "{{ artifactory_home }}/app/artifactory.product.version.properties"
+        src: "{{ artifactory_application_dir }}/app/artifactory.product.version.properties"
         dest: "/tmp/artifactory.product.version.properties"
         flat: true
       changed_when: false
@@ -36,12 +36,12 @@
 
     - name: Delete old artifactory app directory
       ansible.builtin.file:
-        path: "{{ artifactory_home }}/app"
+        path: "{{ artifactory_application_dir }}/app"
         state: absent
       when: running_version != artifactory_version
 
     - name: Copy new artifactory app directory
-      ansible.builtin.command: "cp -r {{ artifactory_untar_home }}/app/. {{ artifactory_home }}/app"
+      ansible.builtin.command: "cp -r {{ artifactory_untar_dir }}/app/. {{ artifactory_application_dir }}/app"
       notify: Restart artifactory
       when: running_version != artifactory_version
 
@@ -67,7 +67,7 @@
 - name: Ensure artifactory service is started and enabled
   become: true
   ansible.builtin.systemd_service:
-    name: "{{ artifactory_daemon }}"
+    name: "{{ artifactory_os_daemon }}"
     state: started
     enabled: true
 
