--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/config/default.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/config/default.yml
@@ -12,55 +12,56 @@
 - name: Copy NGINX config file
   become: true
   ansible.builtin.template:
-    src: "{{ template_nginx_config.src }}"
-    dest: "{{ template_nginx_config.dst }}"
-    owner: "{{ template_nginx_config.owner }}"
-    group: "{{ template_nginx_config.group }}"
-    mode: "{{ template_nginx_config.mode }}"
+    src: "{{ artifactory_nginx_tpl_nginx_config.src }}"
+    dest: "{{ artifactory_nginx_tpl_nginx_config.dst }}"
+    owner: "{{ artifactory_nginx_tpl_nginx_config.owner }}"
+    group: "{{ artifactory_nginx_tpl_nginx_config.group }}"
+    mode: "{{ artifactory_nginx_tpl_nginx_config.mode }}"
   notify: Restart NGINX
 
 - name: Copy NGINX artifactory config
   become: true
   ansible.builtin.template:
-    src: "{{ template_nginx_artifactory.src }}"
-    dest: "{{ template_nginx_artifactory.dst }}"
-    owner: "{{ template_nginx_artifactory.owner }}"
-    group: "{{ template_nginx_artifactory.group }}"
-    mode: "{{ template_nginx_artifactory.mode }}"
+    src: "{{ artifactory_nginx_tpl_artifactory_config.src }}"
+    dest: "{{ artifactory_nginx_tpl_artifactory_config.dst }}"
+    owner: "{{ artifactory_nginx_tpl_artifactory_config.owner }}"
+    group: "{{ artifactory_nginx_tpl_artifactory_config.group }}"
+    mode: "{{ artifactory_nginx_tpl_artifactory_config.mode }}"
   notify: Restart NGINX
 
+# TODO: Find out if certificate needs to be copied to into this directory.
 - name: Ensure NGINX dir exists
   become: true
   ansible.builtin.file:
-    path: "{{ jfrog_ssl_directory.path }}"
+    path: "{{ artifactory_nginx_os_dir_jfrog_ssl.path }}"
     state: directory
-    mode: "{{ jfrog_ssl_directory.mode }}"
-  when: nginx_enable_ssl | bool
+    mode: "{{ artifactory_nginx_os_dir_jfrog_ssl.mode }}"
+  when: artifactory_nginx_enable_ssl | bool
 
 - name: Copy NGINX redirect config
   become: true
   ansible.builtin.template:
-    src: "{{ template_https_redirect.src }}"
-    dest: "{{ template_https_redirect.dst }}"
-    owner: "{{ template_https_redirect.owner }}"
-    group: "{{ template_https_redirect.group }}"
-    mode: "{{ template_https_redirect.mode }}"
+    src: "{{ artifactory_nginx_tpl_https_redirect.src }}"
+    dest: "{{ artifactory_nginx_tpl_https_redirect.dst }}"
+    owner: "{{ artifactory_nginx_tpl_https_redirect.owner }}"
+    group: "{{ artifactory_nginx_tpl_https_redirect.group }}"
+    mode: "{{ artifactory_nginx_tpl_https_redirect.mode }}"
   notify: Restart NGINX
   when:
-    - nginx_enable_ssl | bool
-    - nginx_enable_http_to_https_redirection | bool
+    - artifactory_nginx_enable_ssl | bool
+    - artifactory_nginx_enable_http_to_https_redirection | bool
 
 - name: Copy CA Certificate chain
   become: true
   ansible.builtin.copy:
-    content: "{{ ca_chain_content }}"
-    dest: "{{ system_trust_store.path }}/{{ ca_chain_name }}"
+    content: "{{ artifactory_nginx_ca_chain_content }}"
+    dest: "{{ artifactory_nginx_os_dir_truststore.path }}/{{ artifactory_nginx_ca_chain_name }}"
     owner: root
     group: root
     mode: '0644'
   no_log: true
   notify: Update CA trust store
-  when: ca_chain_content is defined and ca_chain_content | length > 0
+  when: artifactory_nginx_ca_chain_content is defined and artifactory_nginx_ca_chain_content | length > 0
 
 - name: Copy SSL Key and Certificate
   become: true
@@ -73,25 +74,25 @@
   notify: Restart NGINX
   no_log: true
   loop:
-    - src: "{{ ssl_certificate }}"
-      dst: "{{ system_certs.path }}/{{ ssl_certificate_name }}"
+    - src: "{{ artifactory_nginx_ssl_certificate_content }}"
+      dst: "{{ artifactory_nginx_os_dir_certs.path }}/{{ artifactory_nginx_ssl_certificate_name }}"
       owner: 'root'
       group: 'root'
       mode: '0644'
-    - src: "{{ ssl_private_key }}"
-      dst: "{{ system_private_key.path }}/{{ ssl_private_key_name}}"
+    - src: "{{ artifactory_nginx_ssl_private_key_content }}"
+      dst: "{{ artifactory_nginx_os_dir_ssl.path }}/{{ artifactory_nginx_ssl_private_key_name }}"
       owner: 'root'
       group: 'root'
       mode: '0600'
   when:
-    - nginx_enable_ssl | bool
-    - ssl_certificate_content is defined and ssl_certificate_content | length > 0
-    - ssl_private_key_content is defined and ssl_private_key_content | length > 0
+    - artifactory_nginx_enable_ssl | bool
+    - artifactory_nginx_ssl_certificate_content is defined and artifactory_nginx_ssl_certificate_content | length > 0
+    - artifactory_nginx_ssl_private_key_content is defined and artifactory_nginx_ssl_private_key_content | length > 0
 
 - name: Ensure NGINX is Enabled
   become: true
   ansible.builtin.systemd_service:
-    name: "{{ nginx_system_daemon }}"
+    name: "{{ artifactory_nginx_os_daemon }}"
     enabled: true
 
 - name: Flush all handlers
