--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/install/debian.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/install/debian.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure NGINX repositories
-  when: nginx_use_official_repos | bool
+  when: artifactory_nginx_use_official_repos | bool
   become: true
   block:
 
@@ -11,15 +11,15 @@
 
     - name: Add NGINX stable repo
       ansible.builtin.apt_repository:
-        repo: "deb {{ nginx_official_repo_url }} {{ ansible_facts['ansible_distribution_release'] | lower }} nginx"
-        filename: "{{ nginx_official_repo_filename }}"
+        repo: "deb {{ artifactory_nginx_official_repo_url }} {{ ansible_facts['ansible_distribution_release'] | lower }} nginx"
+        filename: "{{ artifactory_nginx_official_repo_filename }}"
         state: present
         update_cache: true
 
 - name: Install NGINX packages
   become: true
   ansible.builtin.apt:
-    name: "{{ nginx_packages }}"
+    name: "{{ artifactory_nginx_os_packages }}"
     state: present
     update_cache: true
     cache_valid_time: 3600
