--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/main.yml
@@ -24,8 +24,8 @@
   ansible.builtin.assert:
     that: >-
       postgresql_version | int in
-      os_family_postgresql_support_map[
-        ansible_facts['distribution'] | lower +
+      postgresql_redhat_support_map[
+        ansible_facts['distribution'] | lower ~
         ansible_facts['distribution_major_version']
       ]
     success_msg: >-
@@ -37,7 +37,7 @@
       {{ ansible_facts['distribution'] | lower }}
       {{ ansible_facts['distribution_major_version'] }}
     quiet: false
-  when: artifactory_postgresql_use_official_repos | bool
+  when: postgresql_use_official_repos | bool
 
 - name: Include distribution variables
   ansible.builtin.include_vars: "{{ item }}"
