--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/vars/all.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/vars/all.yml
@@ -1,5 +1,5 @@
 ---
-# Our mapping to find out if PostgreSQL is supported or not
-distribution_postgresql_support_map:
+# Our mapping to find out if PostgreSQL is supported or not on Red Hat based systems
+postgresql_redhat_support_map:
   redhat8: [10, 12, 13, 15, 16]
   redhat9: [13, 15, 16]
