--- a/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/install.yml
@@ -22,6 +22,7 @@
     path: /etc/cron.allow
     line: "{{ distribution_user }}"
     state: present
+    create: true
   when: distribution_allow_crontab
 
 - name: Allow reading cron.allow
