--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/RedHat.yml
@@ -13,14 +13,14 @@
   ansible.builtin.yum:
     name: python3-psycopg2
     state: present
-  when: ansible_distribution_major_version == '8'
+  when: ansible_facts['distribution_major_version'] | int in [8, 9]
 
 - name: Install python2-psycopg2
   become: true
   ansible.builtin.yum:
     name: python-psycopg2
     state: present
-  when: ansible_distribution_major_version == '7'
+  when: ansible_facts['distribution_major_version'] | int  == 7
 
 - name: Fixup some locale issues
   become: true
@@ -72,8 +72,8 @@
       profiles=
       state=disabled
   when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version | int == 8
+    - ansible_facts['os_family'] == 'RedHat'
+    - ansible_facts['distribution_major_version'] | int in [8, 9]
 
 - name: Install PostgreSQL packages
   become: true
