--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/defaults/main.yml
@@ -1,7 +1,7 @@
 # Defaults file for xray
 
 # The version of xray to install
-xray_version: 3.104.18
+xray_version: 3.107.11
 
 # Whether to enable HA
 xray_ha_enabled: false
@@ -49,6 +49,8 @@ xray_system_yaml_template: system.yaml.j2
 
 linux_distro: "{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}"
 
+centos_gpg_key: "https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official"
+
 xray_db_util_search_filter:
   ubuntu18:
     db5: 'db5.3-util.*ubuntu1.1.*amd64\.deb'
@@ -65,6 +67,10 @@ xray_db_util_search_filter:
   debian11:
     db5: 'TBD'
     db: 'db-util_([0-9]{1,3}\.?){3}.*nmu1_all\.deb'
+  redhat7:
+    db: 'libdb-utils-5.3.*el7.x86_64.rpm'
+  redhat9:
+    db: 'libdb-utils-5.3.*el9.x86_64.rpm'
 
 
 yum_python_interpreter: >-
