--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/setup/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/setup/RedHat.yml
@@ -26,7 +26,7 @@
 - name: Import CentOS GPG public key
   become: true
   ansible.builtin.rpm_key:
-    key: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-Official
+    key: "{{ centos_gpg_key }}"
     state: present
 
 - name: Install socat package
@@ -74,3 +74,30 @@
     ansible_python_interpreter: "{{ yum_python_interpreter }}"
   register: install_erlang_package_result
   when: check_erlang_package_result.matched > 0
+
+- name: Find db-util package
+  ansible.builtin.find:
+    paths: "{{ xray_home }}/app/third-party/misc/"
+    patterns: ["{{ xray_db_util_search_filter[linux_distro]['db'] }}"]
+    use_regex: yes
+    file_type: file
+  register: check_db_util_package_result
+  when: ansible_facts['distribution_major_version'] | int in [7, 9]
+
+- name: Set db-util package file name
+  ansible.builtin.set_fact:
+    xray_db5_util_package: "{{ check_db_util_package_result.files[0].path }}"
+  when:
+    - ansible_facts['distribution_major_version'] | int in [7, 9]
+    - check_db_util_package_result.matched > 0
+
+- name: Install db-util package
+  become: true
+  yum:
+    name: "{{ xray_db5_util_package }}"
+    disable_gpg_check: yes
+  register: install_db_util_package_result
+  when:
+    - ansible_facts['distribution_major_version'] | int in [7, 9]
+    - check_db_util_package_result.matched > 0
+
